# YARP-BT-modules

./: BTCmd.thrift  BT_monitoring.thrift  CMakeLists.txt  README.md
BT_engine/: BT_CPP_engine.cpp  CMakeLists.txt
BT_engine/BT_engine_unige/: BT_engine_unige.cpp  CMakeLists.txt
doc/: Behavior_Tree_Presentation.pptx
examples/: CMakeLists.txt  action_example_module.cpp  client_example.cpp  condition_example_module.cpp  server_example.cpp
include/: BTCmd.h  BTMonitorMsg.h  Direction.h  ReturnStatus.h  TickCommand.h  tick_client.h  tick_server.h  yarp_bt_action_module.h  yarp_bt_condition_module.h  yarp_bt_module.h
libs/: CMakeLists.txt
libs/BT_CPP_leaves/: CMakeLists.txt  Readme.md
libs/BT_CPP_leaves/src/BT_CPP_leaves/: btCpp_checkCondition.cpp  btCpp_checkCondition.h  btCpp_checkRobotAtLocation.cpp  btCpp_checkRobotAtLocation.h  btCpp_checkRobotInRoom.cpp  btCpp_checkRobotInRoom.h  btCpp_client.cpp  btCpp_client.h  btCpp_common.cpp  btCpp_common.h  btCpp_server.cpp  btCpp_server.h  btCpp_setCondition.cpp  btCpp_setCondition.h
libs/BT_wrappers/: CMakeLists.txt  Readme.md
libs/BT_wrappers/generated_files/: BT_monitoring_index.txt  BT_wrappers_index.txt  BlackBoard_index.txt
libs/BT_wrappers/generated_files/include/yarp/BT_wrappers/: ActionID.h  BT_request.h  BlackBoardWrapper.h  MonitorMsg.h  ReturnStatus.h
libs/BT_wrappers/generated_files/src/: ActionID.cpp  BT_request.cpp  BlackBoardWrapper.cpp  MonitorMsg.cpp  ReturnStatus.cpp
libs/BT_wrappers/src/yarp/BT_wrappers/: blackboard_client.cpp  blackboard_client.h  tick_client.cpp  tick_client.h  tick_server.cpp  tick_server.h
libs/BT_wrappers/thrift/: BT_monitoring.thrift  BT_wrappers.thrift  BlackBoard.thrift
modules/: CMakeLists.txt  ask_for_help.cpp  blackboard_module.cpp  compute_inv_pose_module.cpp  fetchBT.xml  grasp_object_module.cpp  locate_object_module.cpp  move_joints_module.cpp  navigation_module.cpp  pour_drink_module.cpp  set_inv_pose_invalid_module.cpp  text_to_action.cpp
modules/examples/: ActionRow.qml  ActionRow.qmlc  CMakeLists.txt  fake_action.cpp  fake_condition.cpp
monitor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor_reader.cpp  monitor_reader.h  robot_interaction.cpp  robot_interaction.h
monitors/: CMakeLists.txt  monitor_Go_to_kitchen_timer.lua
monitors/include/: monitor.h
monitors/monitorGui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  monitor_reader.cpp  robot_interaction.cpp  robot_interaction.h
monitors/src/: monitor.cpp
scenarios/: BTwrapper_module.cpp  CMakeLists.txt  action_command_module.cpp  always_running_module.cpp  ask_for_help.cpp  blackboard_module.cpp  compute_inv_pose_module.cpp  goto_inv_pose_module.cpp  grasp_bottle_module.cpp  iolStateMachineHandler_command_module.cpp  locate_bottle_module.cpp  meta_conditions_module.cpp  move_joints_module.cpp  pour_drink_module.cpp  set_inv_pose_invalid_module.cpp  text_to_action.cpp
src/: BTCmd.cpp  BTMonitorMsg.cpp  Direction.cpp  ReturnStatus.cpp  TickCommand.cpp  tick_client.cpp  tick_server.cpp  yarp_bt_module.cpp  yarp_tick_client.cpp  yarp_tick_server.cpp
thrift/: BTCmd.thrift  BT_monitoring.thrift  CMakeLists.txt
